[metadata]
name = confluence
version = 0.0.1
description = A Communex module for asking questions to a group and summarizing responses
author = Your Name
author_email = speakerjohnash@gmail.com

[options]
packages = find:
install_requires =
    communex
    discord.py
    openai
    uvicorn

[options.packages.find]
where = .